详情页时间正确显示 && 圈子创建页样式修改

--- a/app.json
+++ b/app.json
@@ -17,7 +17,7 @@
     "navigationBarBackgroundColor": "#000",
     "navigationBarTitleText": "名朋角色扮演",
     "navigationBarTextStyle":"#fff",
-    "enablePullDownRefresh":true,
+    "enablePullDownRefresh":false,
     "backgroundColor":"#fff"
   }
   
